--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
+# Project specific 
 db.sqlite3
 *.pyc
 projects/migrations/*
+static/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
